# CS60004-LAB4-MLLM

./: .gitattributes  .gitignore  eval.sh  main.py  pyproject.toml
report/: agent_log.md  log.md  ppt.md
report/latex/: beamersapienza.tex  main.tex
report/ppt/: .gitignore  main.tex
report/report/: main.tex
sft_train_data/: task2_A_text_teacher.jsonl  task2_B_vision_teacher.jsonl  task3_hard_train.jsonl
sft_val_data/: task2_1AB_1024_val_no_bbox.jsonl  task2_1A_1024_val_no_bbox.jsonl  task2_1B_1024_val_no_bbox.jsonl  task2_AB_1024_val_no_bbox.jsonl  task2_A_only_1024_val_no_bbox.jsonl  task2_B_only_1024_val_no_bbox.jsonl  task2_baseline_1024_val_no_bbox.jsonl  task3_final_val_internvl2_bbox_prompt.jsonl  val_A_connector_only_internvl2_no_bbox.jsonl  val_B_connector_language_internvl2_no_bbox.jsonl  val_C_vision_connector_internvl2_no_bbox.jsonl  val_D_full_internvl2_no_bbox.jsonl
task_scripts/: analyze_task1_bad_cases.py  build_task1_teacher_data.py  build_task2_vqa_data.py  evaluate_vqa.py  extract_hard_cases.py  prepare_task3_visual_data.py  run_task2_repro_1024.sh  run_task2_vqa_generate.sh  task0.py  task1.py  task1_agent.py  task2.py
