[project]
name = "cs60004-lab4-mllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "pillow>=10.0.0",
    "sentencepiece>=0.2.0",
    "timm>=1.0.27",
    "torch>=2.5.1",
    "torchvision>=0.17.0",
    "transformers>=4.57.0,<5.0.0",
    "wandb>=0.16.0",
]
